<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_new_workout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:background="@color/color_dialog_mock_shadow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/bg_white_round_cornets"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/dialog_new_workout_title"
            style="@style/DialogTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_new_workout_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_new_workout_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_new_workout_title">

            <EditText
                android:id="@+id/dialog_new_workout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_new_workout_name_hint"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_new_workout_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_new_workout_name_input_layout">

            <EditText
                android:id="@+id/dialog_new_workout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_new_workout_description_hint"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dialog_new_workout_default_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="36dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/dialog_new_workout_default_exercise"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_new_workout_description_input_layout" />

        <com.dvinc.workouttimer.presentation.common.view.NonClickableCheckBox
            android:id="@+id/dialog_new_workout_default_exercise_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="?android:attr/listChoiceIndicatorMultiple"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_new_workout_default_exercise"
            app:layout_constraintEnd_toEndOf="@+id/dialog_new_workout_default_exercise"
            app:layout_constraintTop_toTopOf="@+id/dialog_new_workout_default_exercise" />

        <Button
            android:id="@+id/dialog_new_workout_cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_new_workout_add_button"
            app:layout_constraintEnd_toStartOf="@+id/dialog_new_workout_add_button"
            app:layout_constraintTop_toTopOf="@+id/dialog_new_workout_add_button" />

        <Button
            android:id="@+id/dialog_new_workout_add_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_new_workout_default_exercise" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
